--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@
     box-sizing: border-box;
 }
 
+/* Color description */
+:root{
+    --blue-color :
+    --dark-blue-color : hsl(249, 10%, 26%);
+    --red-color : hsla(0, 100%, 74%);
+    --white-color : white;
+    --green-color : hsl(154, 59%, 51%);
+    --gray-color : gray;
+    --black-color : #070707;
+}
+
 body{
     margin: 0px;
     background-color: hsla(0, 100%, 74%);
@@ -19,17 +30,74 @@ main
     width: 80vw;
     justify-content: flex-end;
     align-items: center;
-    border: 2px solid;
+    /* border: 2px solid; */
+    gap: 1.5em;
 }
 
 section
 {
-    padding: 3.5em;
-    background-color: blueviolet;
     border-radius: 3px;
+    width: 50%;
 }
 
-section:last-child
+section:nth-child(2)
 {
-    background-color: green;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 1em;
+}
+
+
+/*================
+Style for the form
+*/
+
+form
+{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: .9em;
+    background-color: var(--white-color);
+    /* color: --black-color ; */
+    border-radius: 10px;
+    align-items: center;
+    padding: 30px 0px;
+}
+
+form:first-child(1){
+    margin-top: 30px;
+}
+
+input
+{
+    padding: .9em;
+    border-radius: 3px;
+    border: 1px solid gray;
+    width: 80%;
+}
+
+input:focus{
+    border: 1px solid gray;
+}
+
+ input[type="email"]:valid{
+    border: 1px solid green;
+ }
+
+ input[type="email"]:invalid{
+    border: 1px solid red;
+ }
+
+input:nth-last-child(6n-4){
+    background-color: var(--green-color);
+    color: var(--white-color);
+    /* border: ; */
+}
+
+small{
+    color: var(--gray-color);
+    font-size: 1ch;
 }
