--- a/css/style.css
+++ b/css/style.css
@@ -83,13 +83,13 @@ input:focus{
     border: 1px solid val(--black-color);
 }
 
- /* input[type="email"]:valid{
+ input[type="email"]:valid{
     border: 1px solid green;
  }
 
  input[type="email"]:invalid{
     border: 1px solid red;
- } */
+ }
 
 input:nth-last-child(6n-4){
     background-color: var(--green-color);
