--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,16 @@ form:first-child(1){
     margin-top: 30px;
 }
 
+/* Add success & error class */
+.success{
+    border: 1px solid green;
+}
+
+.error{
+    border: 1px solid red;
+}
+
+/* =========================== */
 input
 {
     padding: .9em;
